初めてのコミット

--- a/index.html
+++ b/index.html
@@ -7,23 +7,30 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>初めてのgithub</h1>
-    <h2>githubの使い方</h2>
-    <ol>...</ol>
-    <h2>githubとは？</h2>
-    <p>...</p>
-    <h2>githubとは、名の通り、gitのハブ、拠点、中心です。世界中の人たちが、自分の作品を保存、公開することができる素晴らしいサイトの名称です
-github社という会社によって運営されて個人でも無料で利用できます
-    </h2>
-    <p>...</p>
-    <h2>メリット</h2>
-    <p>...</p>
-<h2>独自の便利な機能もたくさんあります。
-    
-    Gitは基本的にコマンドラインツール（ターミナルなどを使ってキーボードで扱うこと）ですが、GitHubはWEB上でグラフィカルに扱う（マウスでポチポチする）ことができます。
-    
-    また、各プロジェクトにwiki（メモ書き）やタスク管理ツールなど、コラボレーションのための機能も充実しているのが特徴です。</h2>
-
-    </ul>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>初めてのgithub</h1>
+        <h2>githubの使い方</h2>
+        <ol>
+        <li>アカウント登録</li>
+        <br>Tips:登録した
+        </ol>
+        <p>Githubのページで登録しよう</p>
+        <a href="https://github.com/"></a>
+        <p>Githubのページはこちら</p>
+        <h2>Source treeのインストールしよう</h2>
+        <p>Source Treeをインストールして、Githubのアカウント情報を入力しよう</p>
+        <a href="https://ja.altlassian.com/software/sourcetree"></a>
+        <p>Source Treeのダウンロードサイトはこっち</p>
+        <
+    </body>
+    </html>
 </body>
 </html>
