初めてのコミット

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <br>Tips:登録した
         </ol>
         <p>Githubのページで登録しよう</p>
-        <a href="https://github.com/"></a>
+        <a href=https://github.com/"></a>
         <p>Githubのページはこちら</p>
         <h2>Source treeのインストールしよう</h2>
         <p>Source Treeをインストールして、Githubのアカウント情報を入力しよう</p>
