--- a/puraibasi.html/sarmon.html
+++ b/puraibasi.html/sarmon.html
@@ -7,7 +7,8 @@
   <title>寿司</title>
 </head>
 <body>
-    <label for="isbn">寿司：</label>
+    <label for="isbn">寿司:
+    </label>
     <select name="isbn" id="isbn">
       <option value="">---好きな寿司を選んでください---</option>
       <option value="maguro.html">マグロ</option>
