--- a/puraibasi.html/egg.html
+++ b/puraibasi.html/egg.html
@@ -3,7 +3,8 @@
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta http-equiv="X-UA-Compatible" content="ie=edge">
-          <title>寿司</title>
+          <title>寿司
+          </title>
         </head>
         <body>
             <label for="isbn">寿司：</label>
