--- a/puraibasi.html/sarmon.html
+++ b/puraibasi.html/sarmon.html
@@ -16,11 +16,11 @@
       <option value="egg.html">たまご</option>
     </select>
   </form>
-<img src="C:\Users\yonai kanta\Pictures\Camera Roll/samo.jpg" alt="マグロの画像">
+<img src="https://kankeri.github.io/samo.jpg" alt="マグロの画像">
   <script>
   document.addEventListener('DOMContentLoaded',function() {
     document.getElementById('isbn').addEventListener('change',function(){
-      location.href = "" + this.value;
+      location.href = "https://kankeri.github.io/" + this.value;
     },false);
     
   },false)
