--- a/puraibasi.html/egg.html
+++ b/puraibasi.html/egg.html
@@ -15,11 +15,11 @@
               <option value="egg.html">たまご</option>
             </select>
           </form>
-        <img src="C:\Users\yonai kanta\Pictures\Camera Roll\tama.png" alt="たまごの画像">
+        <img src="https://kankeri.github.io/tama.png" alt="たまごの画像">
           <script>
           document.addEventListener('DOMContentLoaded',function() {
             document.getElementById('isbn').addEventListener('change',function(){
-              location.href = "" + this.value;
+              location.href = "https://kankeri.github.io/" + this.value;
             },false);
             
           },false)
