--- a/puraibasi.html/egg.html
+++ b/puraibasi.html/egg.html
@@ -19,7 +19,7 @@
           <script>
           document.addEventListener('DOMContentLoaded',function() {
             document.getElementById('isbn').addEventListener('change',function(){
-              location.href = "https://kankeri.github.io/" + this.value;
+              location.href = "https://kankeri.github.io/puraibasi.html/" + this.value;
             },false);
             
           },false)
