--- a/puraibasi.html/egg.html
+++ b/puraibasi.html/egg.html
@@ -13,6 +13,7 @@
               <option value="maguro.html">マグロ</option>
               <option value="sarmon.html">サーモン</option>
               <option value="egg.html">たまご</option>
+              <option value="git.html">使い方</option>
             </select>
           </form>
         <img src="https://kankeri.github.io/tama.png" alt="たまごの画像">
