--- a/puraibasi.html/sarmon.html
+++ b/puraibasi.html/sarmon.html
@@ -14,6 +14,7 @@
       <option value="maguro.html">マグロ</option>
       <option value="sarmon.html">サーモン</option>
       <option value="egg.html">たまご</option>
+      <option value="git.html">使い方</option>
     </select>
   </form>
 <img src="https://kankeri.github.io/samo.jpg" alt="マグロの画像">
