--- a/document.html
+++ b/document.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>Documentオブジェクトテスト用コード</title>
+<title>お気に入り画像（犬）</title>
 <script>
 window.addEventListener("load", function(){
 
