--- a/document.html
+++ b/document.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="utf-8">
 <title>お気に入り画像（犬）</title>
+<style>
+    #image{
+        width:500px;
+        height:500px;
+    }
+</style>
 <script>
 window.addEventListener("load", function(){
 
