--- a/egg.html
+++ b/egg.html
@@ -7,6 +7,7 @@
           </title>
         </head>
         <body>
+            <form name="samon.html"action="samon.html">
             <label for="isbn">寿司：</label>
             <select name="isbn" id="isbn">
               <option value="">---好きな寿司を選んでください---</option>
@@ -14,6 +15,7 @@
               <option value="sarmon.html">サーモン</option>
               <option value="egg.html">たまご</option>
               <option value="git.html">使い方</option>
+              <option value="image.html">お気に入り画像集</option>
             </select>
           </form>
         <img src="https://kankeri.github.io/tama.png" alt="たまごの画像">
