--- a/git.html
+++ b/git.html
@@ -29,7 +29,8 @@
                <option value="maguro.html"/>マグロ</option>
                <option value="sarmon.html"/>サーモン</option>
                <option value="egg.html">たまご</option>
-               <option value="Git.html">オクトキャット</option>
+               <option value="git.html">オクトキャット</option>
+               <option value="image.html">お気に入り画像集</option>
           </select>
      </form>
      <img src="オクトキャット.jpg" alt="オクトキャット" width=30% height=30%>
