--- a/sarmon.html
+++ b/sarmon.html
@@ -7,6 +7,7 @@
   <title>寿司</title>
 </head>
 <body>
+    <form name="samon.html"action="samon.html">
     <label for="isbn">寿司:
     </label>
     <select name="isbn" id="isbn">
@@ -15,6 +16,7 @@
       <option value="sarmon.html">サーモン</option>
       <option value="egg.html">たまご</option>
       <option value="git.html">使い方</option>
+      <option value="image.html">お気に入り画像集</option>
     </select>
   </form>
 <img src="https://kankeri.github.io/samo.jpg" alt="マグロの画像">
