--- a/git.html
+++ b/git.html
@@ -37,7 +37,7 @@
      <script>
         document.addEventListener('DOMContentLoaded',function(){
                    document.getElementById('drop').addEventListener('change',function(){
-                       location.href = this.value;
+                       location.href = "https://kankeri.github.io/" + this.value;
                    });
                });
      </script>
