--- a/image.html
+++ b/image.html
@@ -46,7 +46,7 @@ window.addEventListener("load", function(){
 
 document.addEventListener('DOMContentLoaded',function(){
                    document.getElementById('drop').addEventListener('change',function(){
-                       location.href = "https://kankeri.github.io/puraibasi.html/" + this.value;
+                       location.href = "https://kankeri.github.io/" + this.value;
                    },false);
                },false);
 </script>
