--- a/egg.html
+++ b/egg.html
@@ -22,7 +22,7 @@
           <script>
           document.addEventListener('DOMContentLoaded',function() {
             document.getElementById('isbn').addEventListener('change',function(){
-              location.href = "https://kankeri.github.io/puraibasi.html/" + this.value;
+              location.href = "https://kankeri.github.io/" + this.value;
             },false);
             
           },false)
