--- a/maguro.html
+++ b/maguro.html
@@ -24,7 +24,7 @@
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       document.getElementById('isbn').addEventListener('change', function () {
-        location.href = "https://kankeri.github.io/puraibasi.html/" + this.value;
+        location.href = "https://kankeri.github.io/" + this.value;
       }, false);
 
     }, false)
