--- a/kadai.html
+++ b/kadai.html
@@ -10,7 +10,7 @@
 <select>
 <script>
 var i;
-for(i=10; i<105; i+=5){
+for(i=100; i>0 ; i-=5){
 document.write('<option value="'+i+'">'+i+'個</option>');
 }
 </script>
