--- a/kadai.html
+++ b/kadai.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>if文</title>
+<title>ドロップダウン</title>
 </head>
 <body>
 <p>個数を選択してください</p>
@@ -10,7 +10,7 @@
 <select>
 <script>
 var i;
-for(i=100; i>0 ; i-=5){
+for(i=100; i >=0 ; i-=5){
 document.write('<option value="'+i+'">'+i+'個</option>');
 }
 </script>
