--- a/sarmon.html
+++ b/sarmon.html
@@ -17,6 +17,12 @@
       <option value="egg.html">たまご</option>
       <option value="git.html">使い方</option>
       <option value="image.html">お気に入り画像集</option>
+      <option value="githubtutorial.html">Github使い方</option>
+      <option value="mesoddo.html">メソッドの使い方</option>
+      <option value="burauzahantei.html">ブラウザ判定</option>
+      <option value="time.html">タイマー</option>
+      <option value="git.html">使い方</option>
+      <option value="image.html">お気に入り画像集</option>
     </select>
   </form>
 <img src="https://kankeri.github.io/samo.jpg" alt="マグロの画像">
