--- a/git.html
+++ b/git.html
@@ -31,6 +31,11 @@
                <option value="egg.html">たまご</option>
                <option value="git.html">オクトキャット</option>
                <option value="image.html">お気に入り画像集</option>
+               <option value="githubtutorial.html">Github使い方</option>
+               <option value="mesoddo.html">メソッドの使い方</option>
+               <option value="burauzahantei.html">ブラウザ判定</option>
+               <option value="time.html">タイマー</option>
+               
           </select>
      </form>
      <img src="オクトキャット.jpg" alt="オクトキャット" width=30% height=30%>
