--- a/burauzahantei.html
+++ b/burauzahantei.html
@@ -27,7 +27,9 @@ window.addEventListener("load", function(){
                                 <option value="githubtutorial.html">Github使い方</option>
                                 <option value="mesoddo.html">メソッドの使い方</option>
                                 <option value="burauzahantei.html">ブラウザ判定</option>
-                                <option value="time.html">タイマー</option>    
+                                <option value="time.html">タイマー</option>
+                                <option value="git.html">使い方</option>
+                                <option value="image.html">お気に入り画像集</option>
                 </select>
             </form>
 アプリケーション名：<span id="appName"></span></br>
