--- a/image.html
+++ b/image.html
@@ -62,6 +62,9 @@ document.addEventListener('DOMContentLoaded',function(){
                 <option value="egg.html">たまご</option>
                 <option value="git.html">オクトキャット</option>
                 <option value="image.html">お気に入り画像集</option>
+                <option value="mesoddo.html">メソッドの使い方</option>
+                <option value="burauzahantei.html">ブラウザ判定</option>
+                <option value="time.html">タイマー</option>
            </select>
       </form>
 <button>画像を変更</button>
