--- a/pro.html
+++ b/pro.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <center>
-    <body background="Sample.png"></body>
+    <body background="kumo.jpg">
     <h2>米内幹大の自己紹介</h2>
     <p>おれのへやにはいってくんなや</p>
 
-    <img src="syoumei (2).jpg" alt="就活" style="border-radius:50%">
+    <img src="syoumei.jpg" alt="就活" style="border-radius:50%">
 
     
     <p>年齢 ： 19歳</p>
@@ -33,13 +33,16 @@
     <p>好きなサッカー選手 ：マルセロ </p>
     <br>
 
-    <br>
-<p><a href="https://youtu.be/VXnrxY-l804">勝手ではありますがここで私の好きなゲーム共有していきたいと思います。パワプロ</a></p>
-<br>
-<p><a href="https://soundcloud.com/nocopyrightsounds/defqwop-heart-afire-feat-strix-ncs-release">好きな歌</a></p>
+    
+<p><a href="https://soundcloud.com/baron1_3/mononoke">好きな歌</a></p>
 
-
-
+<nav>
+    <ul　id="menu"></ul>
+    <li><a href="portforio.html">トップ</a></li>
+    <li><a href="school.html">学校紹介</a></li>
+    <li><a href="toi.html">お問い合わせ</a></li>
+    </ul>
+    </nav>
     </ul>
 </center>
 </body>
