--- a/toi.html
+++ b/toi.html
@@ -12,7 +12,7 @@
                 <ul　id="menu"></ul>
                 <li><a href="pro.html">自己紹介</a></li>
                 <li><a href="school.html">学校紹介</a></li>
-                <li><a href="toi.html">お問い合わせ</a></li>
+                <li><a href="portforio.html">トップ</a></li>
                 </ul>
                 </nav>
                 <section id="contact"> 
