--- a/portforio.html
+++ b/portforio.html
@@ -10,7 +10,7 @@
 
 <div class="container">
     <div class="box">
-      <h1>盛岡情報ビジネス専門学校と、一人の人間について
+      <h1>米内幹大という、一人の人間について
       </h1>
     </div>
   </div>
@@ -33,30 +33,11 @@ bubbly({
   <nav>
     <ul　id="menu"></ul>
     <li><a href="pro.html">自己紹介</a></li>
-    <li><a href="school.html">学校紹介</a></li>
+    <li><a href="school.html"> 作品紹介</a></li>
     <li><a href="toi.html">お問い合わせ</a></li>
     </ul>
     </nav>
 
-    <table class="cp_table">
-      <thead>
-      <tr>
-      <th> </th>
-      <th></th>
-      <th></th>
-      <th></th>
-      <th></th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      </tr>
-      </tbody>
-      </table>
+    
   </body>
 </html>
