--- a/pro.html
+++ b/pro.html
@@ -11,9 +11,16 @@
     <center>
     <body background="kumo.jpg">
     <h2>米内幹大の自己紹介</h2>
-    <p>おれのへやにはいってくんなや</p>
 
     <img src="syoumei.jpg" alt="就活" style="border-radius:50%">
+    <nav>
+        <ul　id="menu"></ul>
+        <li><a href="portforio.html">トップ</a></li>
+        <li><a href="school.html">作品紹介</a></li>
+        <li><a href="toi.html">お問い合わせ</a></li>
+        </ul>
+        </nav>
+        </ul>
 
     
     <p>年齢 ： 19歳</p>
@@ -36,14 +43,7 @@
     
 <p><a href="https://soundcloud.com/baron1_3/mononoke">好きな歌</a></p>
 
-<nav>
-    <ul　id="menu"></ul>
-    <li><a href="portforio.html">トップ</a></li>
-    <li><a href="school.html">学校紹介</a></li>
-    <li><a href="toi.html">お問い合わせ</a></li>
-    </ul>
-    </nav>
-    </ul>
+
 </center>
 </body>
 </html>
