--- a/toi.html
+++ b/toi.html
@@ -8,10 +8,25 @@
     <link rel="stylesheet" href="toi.css">
 </head>
 <body>
+        <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@1.0.0/dist/bubbly-bg.js"></script>
+
+        <script>
+      bubbly({
+        colorStart: '#d5d5d5',
+        colorStop: '#d5d5d5',
+        bubbles:400,
+        blur:1,
+        compose: 'source-over',
+        bubbleFunc:() => `hsla(${200 + Math.random() * 50}, 100%, 50%, .3)`,
+        angleFunc:() => Math.random() > 0.5 ? Math.PI : 2 * Math.PI,
+        velocityFunc:() => 1 + Math.random() * 10,
+        radiusFunc:() => Math.random() * 5
+      });
+        </script>
         <nav>
                 <ul　id="menu"></ul>
                 <li><a href="pro.html">自己紹介</a></li>
-                <li><a href="school.html">学校紹介</a></li>
+                <li><a href="school.html">作品紹介</a></li>
                 <li><a href="portforio.html">トップ</a></li>
                 </ul>
                 </nav>
